docs: added comments to the genetic algorithm class